[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprites/UI/Icons/Buttons/Inventory.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Inventory/Inventory.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/Icons/Life/BarraCheiaMP.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Icons/Icons_Config/Fechar.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Icons/Life/Barravazia_Icon.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Icons/Inventário Icon/Armarhab_2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/Icons/Inventário Icon/background escolha.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/Icons/Inventário Icon/Consm_ingame.png" type="Texture" id=14]
[ext_resource path="res://Sprites/UI/Icons/Life/MP_Icon.png" type="Texture" id=15]
[ext_resource path="res://Sprites/UI/Icons/Inventário Icon/Armas_ingame.png" type="Texture" id=16]
[ext_resource path="res://Sprites/UI/Icons/Inventário Icon/chip_ingame.png" type="Texture" id=17]
[ext_resource path="res://Sprites/UI/Icons/Life/HP_Icon.png" type="Texture" id=18]
[ext_resource path="res://Sprites/UI/Icons/Inventário Icon/background armas.png" type="Texture" id=19]
[ext_resource path="res://Sprites/UI/Icons/Inventário Icon/background consumiveis.png" type="Texture" id=20]
[ext_resource path="res://Sprites/UI/Icons/Select_Player/Attack_Icon.png" type="Texture" id=21]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/Overlock/Overlock-BoldItalic.ttf" type="DynamicFontData" id=22]
[ext_resource path="res://Sprites/UI/Icons/Inventário Icon/background Chip.png" type="Texture" id=23]
[ext_resource path="res://Sprites/UI/Icons/Select_Player/Speed_Icon.png" type="Texture" id=24]
[ext_resource path="res://Sprites/UI/Icons/Inventário Icon/Sabre habilidades.png" type="Texture" id=25]
[ext_resource path="res://icon.png" type="Texture" id=26]
[ext_resource path="res://Scenes/Inventory/BT_Equip_Invent.gd" type="Script" id=27]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 22 )

[node name="Inventory" type="CanvasLayer" groups=["Inventory"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -23.0 ]
}

[node name="Mouse_Block" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BG_Inventory" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BT_Close" type="Button" parent="BG_Inventory"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_top = 4.0
margin_right = -5.0
margin_bottom = 57.0
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="Info_BG" type="TextureRect" parent="BG_Inventory"]
anchor_left = 0.576
anchor_top = 0.644
anchor_right = 0.954
anchor_bottom = 0.989
margin_left = -0.920044
margin_top = 0.479919
margin_right = 0.319946
margin_bottom = -0.119995
texture = ExtResource( 9 )
expand = true

[node name="Status_Txt" type="Label" parent="BG_Inventory/Info_BG"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 263.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "STATUS PLAYER"
align = 1
valign = 1
autowrap = true

[node name="Status_Container" type="VBoxContainer" parent="BG_Inventory/Info_BG"]
anchor_left = 0.095
anchor_top = 0.18
anchor_right = 0.889
anchor_bottom = 0.797
margin_left = -0.0650024
margin_top = 0.0400009
margin_right = 101.697
margin_bottom = 40.516
rect_min_size = Vector2( 570, 0 )
rect_scale = Vector2( 0.85, 0.85 )
custom_constants/separation = 6

[node name="Life" type="Control" parent="BG_Inventory/Info_BG/Status_Container"]
margin_right = 679.0
margin_bottom = 40.0
rect_min_size = Vector2( 530, 40 )

[node name="BG_Bar" type="ColorRect" parent="BG_Inventory/Info_BG/Status_Container/Life"]
margin_left = 45.0
margin_top = 9.0
margin_right = 359.0
margin_bottom = 34.0
color = Color( 0.00392157, 0.0235294, 0.290196, 1 )

[node name="Bar" type="TextureProgress" parent="BG_Inventory/Info_BG/Status_Container/Life/BG_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 3.0
margin_right = -4.0
margin_bottom = -3.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="Icon" type="TextureRect" parent="BG_Inventory/Info_BG/Status_Container/Life"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 18 )
expand = true

[node name="ID_Bar" type="Label" parent="BG_Inventory/Info_BG/Status_Container/Life"]
margin_left = 380.0
margin_top = 13.0
margin_right = 457.0
margin_bottom = 27.0
rect_scale = Vector2( 1.2, 1.2 )
text = "Saúde"
valign = 1

[node name="ATK_Main" type="Control" parent="BG_Inventory/Info_BG/Status_Container"]
margin_top = 46.0
margin_right = 679.0
margin_bottom = 86.0
rect_min_size = Vector2( 530, 40 )

[node name="BG_Bar" type="ColorRect" parent="BG_Inventory/Info_BG/Status_Container/ATK_Main"]
margin_left = 45.0
margin_top = 9.0
margin_right = 359.0
margin_bottom = 34.0
color = Color( 0.00392157, 0.0235294, 0.290196, 1 )

[node name="Bar" type="TextureProgress" parent="BG_Inventory/Info_BG/Status_Container/ATK_Main/BG_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 3.0
margin_right = -4.0
margin_bottom = -3.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="Icon" type="TextureRect" parent="BG_Inventory/Info_BG/Status_Container/ATK_Main"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 21 )
expand = true

[node name="ID_Bar" type="Label" parent="BG_Inventory/Info_BG/Status_Container/ATK_Main"]
margin_left = 379.0
margin_top = 14.0
margin_right = 473.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
text = "ATK PRIMARIO"
valign = 1

[node name="ATK_Sec" type="Control" parent="BG_Inventory/Info_BG/Status_Container"]
margin_top = 92.0
margin_right = 679.0
margin_bottom = 132.0
rect_min_size = Vector2( 530, 40 )

[node name="BG_Bar" type="ColorRect" parent="BG_Inventory/Info_BG/Status_Container/ATK_Sec"]
margin_left = 45.0
margin_top = 9.0
margin_right = 359.0
margin_bottom = 34.0
color = Color( 0.00392157, 0.0235294, 0.290196, 1 )

[node name="Bar" type="TextureProgress" parent="BG_Inventory/Info_BG/Status_Container/ATK_Sec/BG_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 3.0
margin_right = -4.0
margin_bottom = -3.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="Icon" type="TextureRect" parent="BG_Inventory/Info_BG/Status_Container/ATK_Sec"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 21 )
expand = true

[node name="ID_Bar" type="Label" parent="BG_Inventory/Info_BG/Status_Container/ATK_Sec"]
margin_left = 379.0
margin_top = 14.0
margin_right = 492.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
text = "ATK SECUNDARIO"
valign = 1

[node name="Speed_Walk" type="Control" parent="BG_Inventory/Info_BG/Status_Container"]
margin_top = 138.0
margin_right = 679.0
margin_bottom = 178.0
rect_min_size = Vector2( 530, 40 )

[node name="BG_Bar" type="ColorRect" parent="BG_Inventory/Info_BG/Status_Container/Speed_Walk"]
margin_left = 45.0
margin_top = 9.0
margin_right = 359.0
margin_bottom = 34.0
color = Color( 0.00392157, 0.0235294, 0.290196, 1 )

[node name="Bar" type="TextureProgress" parent="BG_Inventory/Info_BG/Status_Container/Speed_Walk/BG_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 3.0
margin_right = -4.0
margin_bottom = -3.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="Icon" type="TextureRect" parent="BG_Inventory/Info_BG/Status_Container/Speed_Walk"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 24 )
expand = true

[node name="ID_Bar" type="Label" parent="BG_Inventory/Info_BG/Status_Container/Speed_Walk"]
margin_left = 379.0
margin_top = 14.0
margin_right = 473.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
text = "Vel. Andar"
valign = 1

[node name="Speed_Run" type="Control" parent="BG_Inventory/Info_BG/Status_Container"]
margin_top = 184.0
margin_right = 679.0
margin_bottom = 224.0
rect_min_size = Vector2( 530, 40 )

[node name="BG_Bar" type="ColorRect" parent="BG_Inventory/Info_BG/Status_Container/Speed_Run"]
margin_left = 45.0
margin_top = 9.0
margin_right = 359.0
margin_bottom = 34.0
color = Color( 0.00392157, 0.0235294, 0.290196, 1 )

[node name="Bar" type="TextureProgress" parent="BG_Inventory/Info_BG/Status_Container/Speed_Run/BG_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 3.0
margin_right = -4.0
margin_bottom = -3.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="Icon" type="TextureRect" parent="BG_Inventory/Info_BG/Status_Container/Speed_Run"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 24 )
expand = true

[node name="ID_Bar" type="Label" parent="BG_Inventory/Info_BG/Status_Container/Speed_Run"]
margin_left = 379.0
margin_top = 14.0
margin_right = 473.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
text = "Vel. Correr"
valign = 1

[node name="Energy" type="Control" parent="BG_Inventory/Info_BG/Status_Container"]
margin_top = 230.0
margin_right = 679.0
margin_bottom = 270.0
rect_min_size = Vector2( 530, 40 )

[node name="BG_Bar" type="ColorRect" parent="BG_Inventory/Info_BG/Status_Container/Energy"]
margin_left = 45.0
margin_top = 9.0
margin_right = 359.0
margin_bottom = 34.0
color = Color( 0.00392157, 0.0235294, 0.290196, 1 )

[node name="Bar" type="TextureProgress" parent="BG_Inventory/Info_BG/Status_Container/Energy/BG_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 3.0
margin_right = -4.0
margin_bottom = -3.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="Icon" type="TextureRect" parent="BG_Inventory/Info_BG/Status_Container/Energy"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 15 )
expand = true

[node name="ID_Bar" type="Label" parent="BG_Inventory/Info_BG/Status_Container/Energy"]
margin_left = 379.0
margin_top = 14.0
margin_right = 473.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
text = "ENERGIA"
valign = 1

[node name="Title_Consum" type="TextureRect" parent="BG_Inventory"]
anchor_left = 0.571
anchor_top = 0.255
anchor_right = 0.807
anchor_bottom = 0.435
margin_left = 3.67993
margin_top = -34.4
margin_right = -0.440063
margin_bottom = -33.8
texture = ExtResource( 14 )
expand = true

[node name="Consum_Repo" type="HBoxContainer" parent="BG_Inventory/Title_Consum"]
anchor_left = 0.031
anchor_top = 0.303
anchor_right = 0.445
anchor_bottom = 0.867
margin_left = 0.0809994
margin_top = -0.0849991
margin_right = 0.194992
margin_bottom = -0.0650024

[node name="Clean_Consum" type="Button" parent="BG_Inventory/Title_Consum"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -72.5
margin_right = -9.0
margin_bottom = -52.5
text = "Limpar"

[node name="Title_Passive" type="TextureRect" parent="BG_Inventory"]
anchor_left = 0.575
anchor_top = 0.431
anchor_right = 0.892
anchor_bottom = 0.621
margin_left = -0.00012207
margin_top = -0.480011
margin_right = -0.640015
margin_bottom = 0.319946
texture = ExtResource( 17 )
expand = true

[node name="Passive_Repo" type="HBoxContainer" parent="BG_Inventory/Title_Passive"]
anchor_left = 0.025
anchor_top = 0.282
anchor_right = 0.465
anchor_bottom = 0.893
margin_left = 3.8
margin_top = -0.0920029
margin_right = 0.279968
margin_bottom = 0.0419922

[node name="Clean_Passive" type="Button" parent="BG_Inventory/Title_Passive"]
visible = false
anchor_left = 0.833
anchor_top = -0.014
anchor_right = 0.98
anchor_bottom = 0.13
margin_left = -0.03302
margin_top = -0.068
margin_right = 0.019989
margin_bottom = 0.0599995
text = "Limpar"

[node name="Title_Weapon" type="TextureRect" parent="BG_Inventory"]
anchor_left = 0.574
anchor_top = 0.065
anchor_right = 0.727
anchor_bottom = 0.224
margin_left = -0.0799561
margin_top = -34.2
margin_right = -0.840088
margin_bottom = -33.92
texture = ExtResource( 16 )
expand = true

[node name="Armarhab_1" type="TextureRect" parent="BG_Inventory/Title_Weapon"]
anchor_left = 1.026
anchor_top = 0.305
anchor_right = 1.802
anchor_bottom = 0.986
margin_left = -0.00601196
margin_top = 0.0299988
margin_right = 4.73798
margin_bottom = 0.155991
texture = ExtResource( 25 )
expand = true

[node name="Armarhab_2" type="TextureRect" parent="BG_Inventory/Title_Weapon"]
anchor_left = 1.879
anchor_top = 0.364
anchor_right = 2.671
anchor_bottom = 1.0
margin_left = -0.0489502
margin_top = -1.60801
margin_right = -0.000976563
margin_bottom = -1.552
texture = ExtResource( 7 )
expand = true

[node name="Weapons_Repo" type="HBoxContainer" parent="BG_Inventory/Title_Weapon"]
anchor_left = 0.092
anchor_top = 0.291
anchor_right = 0.444
anchor_bottom = 0.884
margin_left = 0.0439987
margin_top = -0.052002
margin_right = -0.0920105
margin_bottom = -0.0480042
alignment = 1

[node name="Weapons_Sec_Repo" type="HBoxContainer" parent="BG_Inventory/Title_Weapon"]
anchor_left = 0.546
anchor_top = 0.291
anchor_right = 0.898
anchor_bottom = 0.884
margin_left = 0.0220032
margin_top = -0.052002
margin_right = -0.114014
margin_bottom = -0.0480042
alignment = 1

[node name="Weapons_Main_Abilities" type="HBoxContainer" parent="BG_Inventory/Title_Weapon"]
anchor_left = 1.051
anchor_top = 0.448
anchor_right = 1.795
anchor_bottom = 0.953
margin_left = 0.0570068
margin_top = -0.0559998
margin_right = 0.0650024
margin_bottom = 0.0839844
alignment = 1

[node name="Weapons_Sec_Abilities" type="HBoxContainer" parent="BG_Inventory/Title_Weapon"]
anchor_left = 1.908
anchor_top = 0.488
anchor_right = 2.635
anchor_bottom = 0.971
margin_left = -0.0440063
margin_top = 0.0639954
margin_right = -0.0550537
margin_bottom = -0.0120087
alignment = 1

[node name="Title_Consums" type="TextureRect" parent="BG_Inventory"]
anchor_left = 0.017
anchor_top = 0.202
anchor_right = 0.321
anchor_bottom = 0.326
margin_left = 0.4
margin_top = -0.200012
margin_right = -0.28006
margin_bottom = -0.120026
texture = ExtResource( 20 )
expand = true

[node name="Consum_Itens" type="HBoxContainer" parent="BG_Inventory/Title_Consums"]
anchor_left = 0.017
anchor_top = 0.261
anchor_right = 0.395
anchor_bottom = 0.94
margin_left = 0.0890007
margin_top = 0.0259972
margin_right = -0.284988
margin_bottom = 0.0399933
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 10

[node name="Title_Weapons" type="TextureRect" parent="BG_Inventory"]
anchor_left = 0.017
anchor_top = 0.042
anchor_right = 0.32
anchor_bottom = 0.168
margin_left = 0.28002
margin_top = -0.199995
margin_right = -0.240067
margin_bottom = -0.280052
texture = ExtResource( 19 )
expand = true

[node name="Weapons_Itens" type="HBoxContainer" parent="BG_Inventory/Title_Weapons"]
anchor_left = 0.033
anchor_top = 0.25
anchor_right = 0.967
anchor_bottom = 0.926
margin_left = -0.180918
margin_right = -0.059021
margin_bottom = 0.0640182
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title_Passives" type="TextureRect" parent="BG_Inventory"]
anchor_left = 0.016
anchor_top = 0.372
anchor_right = 0.319
anchor_bottom = 0.585
margin_left = 0.2
margin_top = -0.200012
margin_right = -0.319977
margin_bottom = 0.279999
texture = ExtResource( 23 )
expand = true

[node name="Passive_Itens" type="HBoxContainer" parent="BG_Inventory/Title_Passives"]
anchor_left = 0.033
anchor_top = 0.291
anchor_right = 0.435
anchor_bottom = 0.811
margin_left = -0.180922
margin_top = -0.0813446
margin_right = 0.160553
margin_bottom = 0.0482025
mouse_filter = 2

[node name="Description_Item" type="Panel" parent="BG_Inventory"]
anchor_left = 0.019
anchor_top = 0.627
anchor_right = 0.316
anchor_bottom = 0.832
margin_left = -0.200001
margin_top = -0.200012
margin_right = 0.199982
margin_bottom = -0.200012

[node name="Icon_Item" type="TextureRect" parent="BG_Inventory/Description_Item"]
anchor_left = 0.5
anchor_top = 0.293
anchor_right = 0.5
anchor_bottom = 0.293
margin_left = -83.0
margin_top = -22.039
margin_right = -35.0
margin_bottom = 21.961
texture = ExtResource( 26 )
expand = true

[node name="Item_Name" type="Label" parent="BG_Inventory/Description_Item/Icon_Item"]
anchor_left = 2.219
anchor_top = 0.568
anchor_right = 2.219
anchor_bottom = 0.568
margin_left = -50.512
margin_top = -12.992
margin_right = 50.488
margin_bottom = 13.008
text = "Nome do Item"
align = 1
valign = 1

[node name="Item_Desc" type="Label" parent="BG_Inventory/Description_Item/Icon_Item"]
anchor_left = 1.729
anchor_top = 1.58
anchor_right = 1.729
anchor_bottom = 1.58
margin_left = -109.992
margin_top = -22.52
margin_right = 110.008
margin_bottom = 22.48
text = "Descriçao item"
align = 1
valign = 1

[node name="BT_Equip" type="Button" parent="BG_Inventory/Description_Item"]
anchor_left = 0.5
anchor_top = 0.992
anchor_right = 0.5
anchor_bottom = 0.992
margin_left = -46.0
margin_top = -10.016
margin_right = 41.0
margin_bottom = 9.98399
text = "Equipar"
script = ExtResource( 27 )

[node name="Item_Quant" type="Label" parent="BG_Inventory/Description_Item/BT_Equip"]
margin_left = -2.0
margin_top = 20.0
margin_right = 95.0
margin_bottom = 51.0
text = "x1"
align = 1
valign = 1

[node name="BT_Inventario" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -151.0
margin_top = 9.0
margin_right = -76.0
margin_bottom = 84.0
icon = ExtResource( 1 )
flat = true
icon_align = 1
expand_icon = true

[connection signal="pressed" from="BG_Inventory/BT_Close" to="." method="_on_BT_Close_pressed"]
[connection signal="pressed" from="BG_Inventory/Title_Consum/Clean_Consum" to="." method="_on_Clean_Consum_pressed"]
[connection signal="pressed" from="BG_Inventory/Title_Passive/Clean_Passive" to="." method="_on_Clean_Passive_pressed"]
[connection signal="pressed" from="BG_Inventory/Description_Item/BT_Equip" to="BG_Inventory/Description_Item/BT_Equip" method="_on_BT_Equip_pressed"]
[connection signal="pressed" from="BT_Inventario" to="." method="_on_BT_Inventario_pressed"]
